syntax = "proto3";

option java_multiple_files = true;
option java_package = "ir.cafebazaar.booker.proto";
option java_outer_classname  = "BookerProto";

package proto;

import "google/api/annotations.proto";
import "common.proto";

// Types
message Category {
    string name = 1;
}

message Item {
    string name = 1;
    map<string, string> spec = 2;
}

// Requests
message CategoriesGetRequest {
    RequestProperties requestProperties = 1;
}

message CategoryItemsGetRequest {
    RequestProperties requestProperties = 1;
    string name = 2;
}

message ItemGetRequest {
    RequestProperties requestProperties = 1;
    string categoryName = 2;
    string itemName = 3;
}

message ItemPostRequest {
    RequestProperties requestProperties = 1;
    string categoryName = 2;
    Item item = 3;
}

// Responses
message CategoriesGetReply {
    ReplyProperties replyProperties = 1;
    repeated Category categories = 2;
}

message CategoryItemsGetReply {
    ReplyProperties replyProperties = 1;
    repeated Item items = 2;
}

message ItemGetReply {
    ReplyProperties replyProperties = 1;
    Item item = 2;
}

message ItemPostReply {
    ReplyProperties replyProperties = 1;
    string categoryName = 2;
    Item item = 3;
}

